# Ansible-FRP

./: .ansible-lint  .coveragerc  .gitignore  .nojekyll  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_REVIEW_v0.2.0.md  ansible.cfg  examples.yml  galaxy.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.yml  ruff.toml  run-playbook.sh  sonar-project.properties  test-workflow.sh
.github/: copilot-instructions.md
.github/actions/install-collections/: action.yml
.github/workflows/: ci-simplified.yml  ci.yml  code-quality.yml  docs.yml  main.yml  pr-validation.yml  release.yml  security.yml
.github/workflows/backup/: ci-simplified.yml  ci.yml  code-quality.yml  docs.yml  pr-validation.yml  release-simplified.yml  release.yml  security-simplified.yml  security.yml
docs/: README.md  SECURITY.md  api.md  contributing.md  example-playbook.yml  examples.md  faq.md  guide.md  help.md  installation.md  testing.md  troubleshooting.md  usage.md
docs/dev/: requirements.md
docs/examples/: README.md  example_frpc_playbook.yml  example_inventory.ini  examples.yml  minimal_frpc.yml  minimal_frps.yml
docs/roles/: frp_install.md
meta/: runtime.yml
roles/frp_install/: README.md  ansible.cfg  requirements.yml
roles/frp_install/defaults/: main.yml
roles/frp_install/handlers/: main.yml
roles/frp_install/meta/: main.yml
roles/frp_install/molecule/: README.md  requirements.yml
roles/frp_install/molecule/ci/: ansible.cfg  molecule.yml  requirements.yml  verify.yml
roles/frp_install/molecule/config-variables/: converge_variables.yml  molecule.yml  requirements.yml  verify_config_variables.yml  verify_variables.yml
roles/frp_install/molecule/default/: ansible.cfg  molecule.yml  prepare.yml  requirements.yml  verify.yml
roles/frp_install/molecule/dev/: molecule.yml  requirements.yml
roles/frp_install/molecule/resources/: Dockerfile.j2  create.yml  create_simple.yml  destroy.yml  molecule_base.yml  molecule_test_vars.yml  playbook.yml  playbook_quick.yml  playbook_version_test.yml  verify.yml  verify_quick.yml  verify_version_test.yml
roles/frp_install/molecule/resources/group_vars/all/: common.yml
roles/frp_install/molecule/variables/: molecule.yml  requirements.yml  verify.yml
roles/frp_install/molecule/version_test/: molecule.yml
roles/frp_install/tasks/: main.yml
roles/frp_install/templates/: frpc.service.j2  frpc.toml.j2  frps.service.j2  frps.toml.j2
roles/frp_install/vars/: main.yml
scripts/: sonar-analysis.sh
tests/: conftest.py  fixtures.py  test_role.py  test_variables.py
