[project]
name = "wiphoo-ansible-frp"
version = "1.0.0"
description = "Ansible collection for Fast Reverse Proxy (frp) installation and management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ansible>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-ansible>=4.0.0",
    "pytest-yaml>=1.0.0",
    "molecule[docker]>=6.0.0",
    "ansible-lint>=6.0.0",
]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]

[tool.ansible-lint]
exclude_paths = [
    ".venv/",
    ".github/",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".github",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["wiphoo"]

[tool.setuptools]
# Disable automatic package discovery for Ansible collection
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
# Don't try to find packages in this Ansible collection
exclude = ["*"]
