[project]
name = "wiphoo-ansible-frp"
version = "1.0.0"
description = "Ansible collection for Fast Reverse Proxy (frp) installation and management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-ansible>=4.0.0",
    "pytest-yaml>=1.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "molecule>=6.0.0",
    "molecule-docker>=2.0.0",
    "ansible-lint>=6.0.0",
]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.6.0",
    "pre-commit>=4.3.0",
    "yamllint>=1.35.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-setuptools>=75.0.0",
    "ansible-lint>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=tests",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=85",
]
markers = [
    "unit: Unit tests for role functionality",
    "integration: Integration tests with Ansible",
    "slow: Slow running tests (molecule, etc)",
    "template: Template rendering and validation tests",
    "config: Configuration file validation tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Minimum version requirements
minversion = "6.0"
# Test discovery patterns
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", ".venv"]

[tool.coverage.run]
source = ["tests"]
branch = true
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.pytest_cache/*",
    "*/.ansible/*",
    "*/collections/*",
    "*/htmlcov/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
# Show missing lines in terminal output
show_missing = true
# Skip covered files in terminal output for cleaner display
skip_covered = false
# Precision for coverage percentage
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # Skip debug/development code
    "if DEBUG:",
    "if settings.DEBUG:",
    # Skip abstract methods and NotImplemented
    "raise NotImplementedError",
    "return NotImplemented",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Wiphoo FRP Ansible Collection Test Coverage"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ansible-lint]
exclude_paths = [
    ".venv/",
    ".github/",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
show_error_codes = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".github",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["wiphoo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
# Disable automatic package discovery for Ansible collection
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
# Don't try to find packages in this Ansible collection
exclude = ["*"]
